--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "mongodb": "^6.7.0"
+    "mongodb": "^6.7.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
