--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -11,13 +11,9 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v3
       - name: Run install
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: install
+        run: yarn install
       - name: Test the app
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: test
+        run: yarn test
 
   build:
     needs: test
