--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Run install
         run: yarn install
+      - name: Create env file
+        run: touch .env | 
+          echo TOMTOM_API_KEY=${{ secrets.TOMTOM_API_KEY }} > .env
       - name: Test the app
         run: yarn test
 
