--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -24,6 +24,9 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
+      - name: Create env file
+        run: touch .env | 
+          echo TOMTOM_API_KEY=${{ secrets.TOMTOM_API_KEY }} > .env
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker image
