--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -24,9 +24,9 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
-      - name: Create env file
-        run: touch .env | 
-          echo TOMTOM_API_KEY=${{ secrets.TOMTOM_API_KEY }} > .env
+      # - name: Create env file
+      #   run: touch .env | 
+      #     echo TOMTOM_API_KEY=${{ secrets.TOMTOM_API_KEY }} > .env
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker image
@@ -38,9 +38,6 @@ jobs:
     needs: build
     runs-on: [self-hosted]
     steps:
-      # need to install docker at runner
-      - name: gain permission
-        run: sudo chmod 777 /var/run/docker.sock
       - name: Pull image from docker hub
         run: docker pull ${{ secrets.DOCKER_USERNAME }}/map-search:latest
       - name: Delete old container
