--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -19,6 +19,7 @@ jobs:
         run: yarn test
 
   build:
+    # needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
