--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -6,14 +6,14 @@ on:
 
 jobs:
   test:
-    runs-on: node20
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
       - name: Run install
         run: yarn install
       - name: Create env file
-        run: touch .env | 
+        run: touch .env |
           echo TOMTOM_API_KEY=${{ secrets.TOMTOM_API_KEY }} > .env
       - name: Test the app
         run: yarn test
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v3
       - name: Create env file
-        run: touch .env | 
+        run: touch .env |
           echo TOMTOM_API_KEY=${{ secrets.TOMTOM_API_KEY }} > .env
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
