--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -1,8 +1,9 @@
 name: CICD
 
-on: workflow_dispatch
-  # push:
-  #   branches: [montu-map-search]
+on: 
+  workflow_dispatch:
+  push:
+    branches: [montu-map-search]
 
 jobs:
   test:
